added instruction to make a table

--- a/resume.html
+++ b/resume.html
@@ -106,7 +106,7 @@
         </ul><br>
         <h3>Personal Details:</h3>
         <hr>
-        <p>Date of Birth : 31-03-1998</p>
+        <p> iNCLUDE TABLEDate of Birth : 31-03-1998</p>
         <p>Father Name : T. Madhusudana Gupta.</p>  
           <p>Mother Name : T. Chandana Lakshmi.</p>
           <p>Languages Known : English, Telugu,</p>
