changed some elements

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 	  	}
 	  	.bordered {
     width: 95%;
-    height: 1850px;
+    height: 1900px;
     padding: 20px;
     border: 10px groove yellowgreen;
 	  	}
@@ -20,9 +20,7 @@
       border-bottom: 1px solid black;
       cursor: pointer;
          }
-         .a{
-          text-
-         }
+         
          table
             {
                 border: 2px solid black;
@@ -106,21 +104,24 @@
         </ul><br>
         <h3>Personal Details:</h3>
         <hr>
-        <p> iNCLUDE TABLEDate of Birth : 31-03-1998</p>
-        <p>Father Name : T. Madhusudana Gupta.</p>  
-          <p>Mother Name : T. Chandana Lakshmi.</p>
+        <table class="a">
+        <p>Date of Birth <span style="display:inline-block; width: 30px;"></span> :31-03-1998</p>
+        <p>Father Name <span style="display:inline-block; width: 32px;"></span>   : T. Madhusudana Gupta.</p>  
+        <p>Mother Name <span style="display:inline-block; width: 30px;"></span>: T. Chandana Lakshmi.</p>
           <p>Languages Known : English, Telugu,</p>
-          <p>Strengths : Team work, Determination and Marketing.</p>
-          <p>Hobbies: Writing blogs<br>
-            <ol> 
-              <li>  Wordpress</li><br> 
-              <li>  Medium</li></ol>
-          </p>
-          <p>Other links:Github<br>Twitter</p>
-          <p>Address : H.No-87/556
+          <p>Strengths<span style="display:inline-block; width: 65px;"></span>: Team work, Determination and Marketing.</p>
+          <p>Hobbies<span style="display:inline-block; width: 73px;"></span>:Writing blogs</p>
+           <p><span style="display:inline-block; width: 130px;"></span>1. Wordpress (<a href="http://tanaksalarahulgupta.wordpress.com" target="_blank">
+            http://tanaksalarahulgupta.wordpress.com</a>)</p>
+          <p><span style="display:inline-block; width: 130px;"></span>2. Medium (<a href="https://medium.com/@tankasalarahulgupta" target="_blank">https://medium.com/@tankasalarahulgupta</a>)</p>
+          <p>Other links<span style="display:inline-block; width: 60px;"></span>: Github (<a href="https://github.com/tragu" target="_blank">https://github.com/tragu</a>)</p>
+          <p><span style="display:inline-block; width: 140px;"></span>Twitter (<a href="https://twitter.com/Rahul_tragu" target="_blank">https://twitter.com/Rahul_tragu</a>)</p>
+          <p>Address<span style="display:inline-block; width: 73px;"></span> : H.No-87/556
                   Srinagar colony,
                       Kurnool, Andhra Pradesh, Pin-518002.</p>
-           <p>Place : Kurnool</p><br><br>
+           <p>Place<span style="display:inline-block; width: 90px;"></span> : Kurnool</p>
+           </table>
+           <br><br>
            <h3 style="text-align:right ">(RAHUL GUPTA TANKASALA)</h3>
        </div>
   </body>
